Refine names of heatmap and dot plot functions

--- a/app/views/site/_view_gene_expression_heatmap.html.erb
+++ b/app/views/site/_view_gene_expression_heatmap.html.erb
@@ -106,8 +106,8 @@
             url: '<%= annotation_values_path(accession: @study.accession, study_name: @study.url_safe_name) %>?' + renderUrlParams,
             dataType: 'JSON',
             success: function(annotations) {
-                renderMorpheus(dataPath, newAnnotPath, annotName, annotType, '#heatmap-plot', annotations, fit, height, colorScalingMode);
-                renderMorpheusDotPlot(dataPath, newAnnotPath, annotName, annotType, '#dot-plot', annotations, fit, height);
+                renderHeatmap(dataPath, newAnnotPath, annotName, annotType, '#heatmap-plot', annotations, fit, height, colorScalingMode);
+                renderDotPlot(dataPath, newAnnotPath, annotName, annotType, '#dot-plot', annotations, fit, height);
             }
         });
     }
