--- a/app/views/site/covid19.html.erb
+++ b/app/views/site/covid19.html.erb
@@ -36,7 +36,7 @@
         <a href="#" id="covid-contact-link">contact us</a>.
        </span>
       <div class="tab-content top-pad">
-        <div id="covid19-page-content"></div>
+        <div id="home-page-content"></div>
       </div>
     </div>
   </div>
