--- a/app/views/site/covid19.html.erb
+++ b/app/views/site/covid19.html.erb
@@ -11,7 +11,7 @@
     }
   </style>
   <div id="main-banner-logo">
-    <%= image_tag "SCP-logo.png", id: 'scp-logo' %><small id="beta-main" class="label label-danger">BETA</small>
+    <%= image_tag "SCP-logo.png", id: 'scp-logo' %>
     <p id='main-banner-tag-line' class="scp-banner-position">Special section devoted to COVID-19 studies</p>
   </div>
 </div>
