--- a/app/views/taxons/_genome_assembly_fields.html.erb
+++ b/app/views/taxons/_genome_assembly_fields.html.erb
@@ -27,6 +27,6 @@
       <%= f.fields_for :genome_annotations %>
     </div>
   </div>
-  <p><%= f.link_to_add "<span class='fas fa-plus'></span> Add an Annotation".html_safe, :genome_annotations,
+  <p><%= f.link_to_add "<span class='fas fa-plus'></span> Add an annotation".html_safe, :genome_annotations,
                        class: 'btn btn-sm btn-warning', id: 'add-genome-annotation' %></p>
 </div>
