Draft COVID-19 collection fix

--- a/app/views/site/covid19.html.erb
+++ b/app/views/site/covid19.html.erb
@@ -37,6 +37,9 @@
        </span>
       <div class="tab-content top-pad">
         <div id="home-page-content"></div>
+        <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
+          window.SCP.renderComponent('home-page-content', 'HomePageContent', {})
+        </script>
       </div>
     </div>
   </div>
